--- a/thesis/discussion.tex
+++ b/thesis/discussion.tex
@@ -4,6 +4,9 @@
 \section{Future Work}
 \label{sec:future-work}
 
+Bla.\footnote{These ideas have already been informally described by me online at
+  \protect\url{https://github.com/phipsgabler/probability-ir}.}
+
 
 
 
