--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -169,6 +169,8 @@
 \newcommand{\Vard}[2][\empty]{\mathbb{V}_{\ifx#1\empty\empty\else{\! #1}\fi}\left[#2\right]}
 \newcommand{\entropy}[1]{\mathrm{H}(#1)}
 \newcommand\given[1][]{\:#1\vert\:}
+\newcommand{\distr}[1]{\mathrm{#1}}
+\newcommand{\from}{\sim}
 \newcommand{\kldiv}[2]{\mathrm{D}_{\text{KL}}(#1 \parallel #2)}
 % \newcommand{\transp}[1]{#1^{\mathrm{T}}}
 \newcommand{\inverse}[1]{#1^{-1}}
