--- a/thesis/title.tex
+++ b/thesis/title.tex
@@ -61,7 +61,7 @@ Supervisor\\
 Univ.-Prof. Dipl.-Ing. Dr.\thinspace{}mont. Franz Pernkopf\\
 \vfill
 Co-supervisor\\
-Dipl.-Ing. Martin Trapp, BSc\\
+Dipl.-Ing. Dr. Martin Trapp, BSc\\
 \vfill
 \vfill
 Institute of Signal Processing and Speech Communication\\
