Fix symbolic footnotes with new environment

--- a/thesis/license.tex
+++ b/thesis/license.tex
@@ -3,65 +3,60 @@
   \label{license}
   \currentpdfbookmark{License}{license}
 
-  % change to symbolic footnotes for this page
-  \renewcommand*{\thefootnote}{\fnsymbol{footnote}}
-  
-  \abstracttextfont
-  \vspace*{\stretch{1}}
-  \begin{center}
-    This work is licensed under a \\ \href{http://creativecommons.org/licenses/by-sa/4.0/}{Creative
-      Commons Attribution-ShareAlike 4.0 International License}.
-  \end{center}
-  \begin{center}
-    \includegraphics[scale=1]{figures/by-sa}
-  \end{center}
-  \vspace{\stretch{2}}
-  \begin{center}
-    All code samples, unless otherwise noted or cited from other sources, \\ are also available under an
-    \href{http://opensource.org/licenses/MIT}{\abbrev{MIT} license}:
-  \end{center}
-  \vspace*{-1ex}
-  \begin{ttfamily}
-    \setlength{\parskip}{12pt}
-    \setlength{\parindent}{0pt}
-    The MIT License (MIT)
-
-    Copyright (c) 2020 Philipp Gabler
-
-    Permission is hereby granted, free of charge, to any person obtaining a copy of this software
-    and associated documentation files (the "Software"), to deal in the Software without
-    restriction, including without limitation the rights to use, copy, modify, merge, publish,
-    distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the
-    Software is furnished to do so, subject to the following conditions:
-
-    The above copyright notice and this permission notice shall be included in all copies or
-    substantial portions of the Software.
-
-    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING
-    BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
-    NON\-IN\-FRINGE\-MENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
-    CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
-    FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-  \end{ttfamily}
-  
-  \vspace{2ex}
-  
-  \begin{adjustwidth}{0.5\absleftindent}{0.5\absrightindent}
+  \begin{symbolicfootnotes}
+    \abstracttextfont
+    \vspace*{\stretch{1}}
     \begin{center}
-      % A full |sbt| project containing many of the code samples can be found at
-      % \url{https://github.com/phipsgabler/dsl-examples}. 
-
-      The \LaTeX{} source of this document is available at\\
-      \url{https://github.com/phipsgabler/master-thesis} \\
-      or upon request from the author\footnote{\texttt{pgabler@student.tugraz.at}}.
+      This work is licensed under a \\ \href{http://creativecommons.org/licenses/by-sa/4.0/}{Creative
+        Commons Attribution-ShareAlike 4.0 International License}.
     \end{center}
-  \end{adjustwidth}
-  
-  \vspace{\stretch{1}}
+    \begin{center}
+      \includegraphics[scale=1]{figures/by-sa}
+    \end{center}
+    \vspace{\stretch{2}}
+    \begin{center}
+      All code samples, unless otherwise noted or cited from other sources, \\ are also available under an
+      \href{http://opensource.org/licenses/MIT}{\abbrev{MIT} license}:
+    \end{center}
+    \vspace*{-1ex}
+    \begin{ttfamily}
+      \setlength{\parskip}{12pt}
+      \setlength{\parindent}{0pt}
+      The MIT License (MIT)
 
-  % restore footnote counter to start with 1
-  \setcounter{footnote}{0}
-  
+      Copyright (c) 2020 Philipp Gabler
+
+      Permission is hereby granted, free of charge, to any person obtaining a copy of this software
+      and associated documentation files (the "Software"), to deal in the Software without
+      restriction, including without limitation the rights to use, copy, modify, merge, publish,
+      distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the
+      Software is furnished to do so, subject to the following conditions:
+
+      The above copyright notice and this permission notice shall be included in all copies or
+      substantial portions of the Software.
+
+      THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING
+      BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+      NON\-IN\-FRINGE\-MENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
+      CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
+      FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+    \end{ttfamily}
+    
+    \vspace{2ex}
+    
+    \begin{adjustwidth}{0.5\absleftindent}{0.5\absrightindent}
+      \begin{center}
+        % A full |sbt| project containing many of the code samples can be found at
+        % \url{https://github.com/phipsgabler/dsl-examples}. 
+
+        The \LaTeX{} source of this document is available at\\
+        \url{https://github.com/phipsgabler/master-thesis} \\
+        or upon request from the author\footnote{\texttt{pgabler@student.tugraz.at}}.
+      \end{center}
+    \end{adjustwidth}
+    
+    \vspace{\stretch{1}}
+  \end{symbolicfootnotes}
 \end{adjustwidth}
 
 
